Day2作业1.2 修改query_base64_image_description的方法描述，分析gpt-4v.jpg图片；同时支持历史对话 1.3 输出分析结果，并使用函数对输出进行渲染，渲染成Markdown格式使结果更易读；

--- a/openai_api/gpt-4v.ipynb
+++ b/openai_api/gpt-4v.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "1e83da68-d387-46da-8236-78fc607d1fab",
    "metadata": {},
    "outputs": [],
@@ -191,47 +191,59 @@
     "import requests\n",
     "import json\n",
     "\n",
-    "client = OpenAI()  # 初始化 OpenAI 客户端\n",
+    "# 初始化 OpenAI 客户端\n",
+    "client = OpenAI(api_key='sk-k9jM0trGFbAQm1cu6bD951Cd503c4203A64d6aFf7aD8Ff09',base_url='https://api.xiaoai.plus/v1') \n",
     "\n",
-    "def query_base64_image_description(image_path, prompt=\"解释下图里的内容？\", max_tokens=1000):\n",
+    "def query_base64_image_description(image_path, prompt=\"图里的内容讲了什么？你能对它进行分析吗？\", history_message = None, last_reply = None, max_tokens=1000 ):\n",
     "\n",
     "    # 实现 Base64 编码\n",
     "    def encode_image(path):\n",
     "        with open(path, \"rb\") as image_file:\n",
     "            return base64.b64encode(image_file.read()).decode('utf-8')\n",
     "\n",
-    "    # 获取图像的 Base64 编码字符串\n",
-    "    base64_image = encode_image(image_path)\n",
-    "\n",
     "    # 构造请求的 HTTP Header\n",
     "    headers = {\n",
     "        \"Content-Type\": \"application/json\",\n",
     "        \"Authorization\": f\"Bearer {client.api_key}\"\n",
     "    }\n",
+    "    # message中的content\n",
+    "    content = []\n",
     "\n",
+    "    # 如果传入image path不为空时才对image进行操作\n",
+    "    if image_path == \"\":\n",
+    "        content = [{\"type\": \"text\", \"text\": prompt}]\n",
+    "    else :\n",
+    "        # 获取图像的 Base64 编码字符串\n",
+    "        base64_image = encode_image(image_path)\n",
+    "        content = [\n",
+    "                    {\"type\": \"text\", \"text\": prompt},\n",
+    "                    {\"type\": \"image_url\", \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"}}\n",
+    "        ]\n",
+    "    messages = [{\"role\": \"user\", \"content\": content}]\n",
+    "    # 当history_message 和last_reply不为空时将history_message 和last_reply进行组装以支持历史对话\n",
+    "    if history_message != None and last_reply!= None:\n",
+    "        message = {'role': 'assistant', 'content': last_reply}\n",
+    "        history_message.append(message)\n",
+    "        history_message.append(messages[0])\n",
+    "        messages = history_message\n",
     "    # 构造请求的负载\n",
     "    payload = {\n",
     "        \"model\": \"gpt-4-turbo\",\n",
-    "        \"messages\": [\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": [\n",
-    "                    {\"type\": \"text\", \"text\": prompt},\n",
-    "                    {\"type\": \"image_url\", \"image_url\": {\"url\": f\"data:image/jpeg;base64,{base64_image}\"}}\n",
-    "                ]\n",
-    "            }\n",
-    "        ],\n",
+    "        \"messages\": messages,\n",
     "        \"max_tokens\": max_tokens\n",
     "    }\n",
     "\n",
     "    # 发送 HTTP 请求\n",
-    "    response = requests.post(\"https://api.openai.com/v1/chat/completions\", headers=headers, json=payload)\n",
+    "    response = requests.post(\"https://api.xiaoai.plus/v1/chat/completions\", headers=headers, json=payload)\n",
     "\n",
     "    # 检查响应并提取所需的 content 字段\n",
     "    if response.status_code == 200:\n",
     "        response_data = response.json()\n",
     "        content = response_data['choices'][0]['message']['content']\n",
-    "        return content\n",
+    "        return {\n",
+    "            'messages': messages,\n",
+    "            'current_reply':content\n",
+    "        }\n",
     "    else:\n",
     "        return f\"Error: {response.status_code}, {response.text}\""
    ]
@@ -367,7 +379,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "7c046958-aa7a-4066-88fa-4134869d9226",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -405,28 +419,195 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "156a0f17-cca8-4f01-9ce5-53384b5ffda4",
+   "cell_type": "markdown",
+   "id": "93607b94-80a3-4b17-94ba-b2c4594e4148",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![](./images/gpt-4v.jpg)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "id": "78601634-f4b5-49ca-9f85-45bf64783fbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "这张图展示了NLP（自然语言处理）领域中的一些重要发展阶段及相关技术。具体内容如下：\n",
+      "\n",
+      "1. **预训练在CV（计算机视觉）和NLP中的应用**：\n",
+      "   - **Frozen**：预训练模型参数固定，不进行调整。\n",
+      "   - **Fine-tuning**：在预训练模型的基础上进行微调，使其更适应特定任务。\n",
+      "\n",
+      "2. **神经网络表示模型（NN LM）**：\n",
+      "   - **word2vec**：一种词向量表示方法，包括**CBOW（Continuous Bag of Words）**和**skip-gram**两种模型。\n",
+      "   - **GloVe（Global Vectors for Word Representation）**：另一种词向量表示方法。\n",
+      "\n",
+      "3. **ELMO（基于上下文的词嵌入）**：\n",
+      "   - **双向双向LSTM**：使用双向LSTM网络生成词嵌入。\n",
+      "   - **动态调整embedding**：根据上下文动态调整词的嵌入表示。\n",
+      "\n",
+      "4. **GPT（基于Transformer模型的生成预训练模型）**：\n",
+      "   - 利用Transformer模型进行预训练，替代传统的LSTM。\n",
+      "   - **Fine-tuning**：对预训练的GPT模型进行微调。\n",
+      "\n",
+      "5. **Bert**：尽管图中未详细展开，但BERT（Bidirectional Encoder Representations from Transformers）也是一个基于Transformer的预训练模型，注重双向的上下文信息。\n",
+      "\n",
+      "图中的内容按时间顺序展示了NLP领域中预训练模型的演变过程，从最初的静态词向量表示（如word2vec、GloVe）到上下文相关的词嵌入（如ELMO），再到基于Transformer的生成预训练模型（如GPT），最后是双向编码器表示模型（如BERT）。\n",
+      "\n",
+      "每个阶段都包含了对应的技术细节，例如使用的神经网络结构、预训练方法及微调策略等。这些信息有助于理解NLP模型的发展趋势及其在实际应用中的改进点。\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = query_base64_image_description(\"./images/gpt-4v.jpg\")\n",
+    "print(data['current_reply'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "862d2203",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "这张图展示了NLP（自然语言处理）领域中的一些重要发展阶段及相关技术。具体内容如下：\n",
+       "\n",
+       "1. **预训练在CV（计算机视觉）和NLP中的应用**：\n",
+       "   - **Frozen**：预训练模型参数固定，不进行调整。\n",
+       "   - **Fine-tuning**：在预训练模型的基础上进行微调，使其更适应特定任务。\n",
+       "\n",
+       "2. **神经网络表示模型（NN LM）**：\n",
+       "   - **word2vec**：一种词向量表示方法，包括**CBOW（Continuous Bag of Words）**和**skip-gram**两种模型。\n",
+       "   - **GloVe（Global Vectors for Word Representation）**：另一种词向量表示方法。\n",
+       "\n",
+       "3. **ELMO（基于上下文的词嵌入）**：\n",
+       "   - **双向双向LSTM**：使用双向LSTM网络生成词嵌入。\n",
+       "   - **动态调整embedding**：根据上下文动态调整词的嵌入表示。\n",
+       "\n",
+       "4. **GPT（基于Transformer模型的生成预训练模型）**：\n",
+       "   - 利用Transformer模型进行预训练，替代传统的LSTM。\n",
+       "   - **Fine-tuning**：对预训练的GPT模型进行微调。\n",
+       "\n",
+       "5. **Bert**：尽管图中未详细展开，但BERT（Bidirectional Encoder Representations from Transformers）也是一个基于Transformer的预训练模型，注重双向的上下文信息。\n",
+       "\n",
+       "图中的内容按时间顺序展示了NLP领域中预训练模型的演变过程，从最初的静态词向量表示（如word2vec、GloVe）到上下文相关的词嵌入（如ELMO），再到基于Transformer的生成预训练模型（如GPT），最后是双向编码器表示模型（如BERT）。\n",
+       "\n",
+       "每个阶段都包含了对应的技术细节，例如使用的神经网络结构、预训练方法及微调策略等。这些信息有助于理解NLP模型的发展趋势及其在实际应用中的改进点。"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "# 使用 display 和 Markdown 函数显示 Markdown 内容\n",
+    "display(Markdown(data['current_reply']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "e3bd772f-9492-4f6c-b05a-666b772ca3c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "对于图文中的分析，可以再进一步补充和阐述一些细节，以加深对各种技术的理解：\n",
+       "\n",
+       "1. **预训练模型的比较**：\n",
+       "   - 对于“Frozen”和“Fine-tuning”，可进一步解释其在实际应用中的差异与选择依据。例如，完全冻结预训练权重常用于迁移学习的场景，而微调则适用于任务与预训练数据相似度较高的情形。\n",
+       "\n",
+       "2. **神经网络表示模型深入**：\n",
+       "   - **word2vec**的**CBOW**与**skip-gram**模型的具体差异和适用场景可以更详细说明。CBOW是预测目标词基于上下文，而skip-gram则是通过目标词来预测上下文，后者通常对小数据集更有效。\n",
+       "   - **GloVe**模型的工作原理和与word2vec的区别可进一步阐释，如GloVe是通过全局词频统计信息来生成词向量。\n",
+       "\n",
+       "3. **ELMO的额外细节**：\n",
+       "   - 补充ELMO如何利用双向LSTM捕捉复杂上下文关系，并具体说明其如何实现词义的动态调整。\n",
+       "\n",
+       "4. **GPT和BERT的发展及差异**：\n",
+       "   - 对于GPT，可以更明确地介绍其使用单向Transformer结构的原因及其在自然语言理解和生成中的应用。\n",
+       "   - BERT的训练技术（如Masked Language Model和Next Sentence Prediction），以及其与GPT在设计哲学（双向 vs. 单向）上的本质区别应更详细说明。\n",
+       "   - 也可以补充这些模型对下游任务的影响，如提升了哪些特定NLP任务的性能。\n",
+       "\n",
+       "5. **技术要点的适应性和限制**：\n",
+       "   - 分析每种技术方法的优势与局限，例如BERT的高内存消耗和训练成本，以及是否有简化或改进的模型（如DistilBERT, ALBERT等）。\n",
+       "\n",
+       "通过这样的补充，可以为读者或学习者提供一个更全面、更深入的技术视角，并帮助他们更好地理解每种模型的特点、用途及其在NLP领域的应用背景。"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = query_base64_image_description(\"\",\"对于上述的分析，在内容上你觉得还有那些不足之处？请进行适当补充\",data['messages'], data['current_reply'])\n",
+    "display(Markdown(data['current_reply']))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "8afdeacb-aac1-4692-be2b-fb7957ba5e8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "当然，DistilBERT 是一个精简化的BERT模型，旨在减少模型的大小并提高运行速度，同时保持较高的性能。这种模型由Hugging Face团队提出，是对原始BERT模型的一个重要的缩减和优化。\n",
+       "\n",
+       "### 核心特征\n",
+       "\n",
+       "1. **模型大小和速度**：\n",
+       "   - DistilBERT的模型大小是原始BERT模型的一半，这意味着它的参数数量大约减少了40%至60%，但据报告能保持97%的BERT性能。\n",
+       "   - 这种减少的模型复杂性允许DistilBERT比BERT更快地进行训练和预测，增强了其在资源受限的环境下的适用性。\n",
+       "\n",
+       "2. **知识蒸馏**：\n",
+       "   - DistilBERT采用了一种称为“知识蒸馏”的技术。在这个过程中，一个小型的“学生”模型学习模仿一个大型的“教师”模型（在本案例中，BERT是教师）。通过这种方式，小模型能够学习到大模型的行为和概念。\n",
+       "   - 蒸馏过程主要涉及训练学生模型对教师模型的输出进行模仿，这不仅仅是匹配最终输出，还包括中间层的输出，以充分利用教师模型的内部知识。\n",
+       "\n",
+       "3. **训练方法**：\n",
+       "   - 除了标准的蒸馏损失，DistilBERT的训练还结合了交叉熵损失，这有助于学生直接从真实标签学习。\n",
+       "   - 还加入了对教师模型中间层的正则化，以更好地模拟教师模型的内部行为。\n",
+       "\n",
+       "### 应用场景\n",
+       "\n",
+       "DistilBERT适用于需要快速响应或资源有限的环境，如移动设备和在线服务，可以用于文本分类、问答系统、自然语言理解任务等，典型的使用场景包括：\n",
+       "\n",
+       "- 在用户交互需快速响应的应用中，如聊天机器人和个人助理。\n",
+       "- 在计算资源有限的设备上，如手机和嵌入式系统中。\n",
+       "- 在需要处理大量数据的后端系统中，以减少处理时间和成本。\n",
+       "\n",
+       "### 总结\n",
+       "\n",
+       "DistilBERT提供了一种高效的方式来利用BERT的强大能力，同时显著降低了资源需求和运行成本。这使得在多种场合下能够更实用和可行，尤其是在对模型大小和推理速度有严格要求的应用中。"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = query_base64_image_description(\"\",\"对于你提到的DistilBERT，我很感兴趣，可以为我详细讲讲吗？\",data['messages'], data['current_reply'])\n",
+    "display(Markdown(data['current_reply']))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -456,9 +637,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain",
    "language": "python",
-   "name": "python3"
+   "name": "langchain"
   },
   "language_info": {
    "codemirror_mode": {
