3. 扩展langchain chains 3.1 扩展chains，使其支持生物、计算机和汉语文学老师等学科的提示词模板及对应 Chains问答。

--- a/langchain/jupyter/chains/router_chain.ipynb
+++ b/langchain/jupyter/chains/router_chain.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aaf8c391-9225-4e66-ad4d-d689b53a0379",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "33b5061c-391e-4762-91c7-73b57f4ab501",
    "metadata": {},
    "outputs": [],
@@ -126,12 +126,33 @@
     "先回答这些组成部分，然后再将它们整合起来回答更广泛的问题。\n",
     "\n",
     "这是一个问题：\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "computer_template = \"\"\"你是一位很棒的计算机学家。你擅长回答计算机相关问题。\n",
+    "之所以如此出色，是因为你能够将难题分解成各个组成部分，\n",
+    "先回答这些组成部分，然后再将它们整合起来回答更广泛的问题。\n",
+    "\n",
+    "这是一个问题：\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "biology_template = \"\"\"你是一位很棒的生物学家。你擅长回答生物问题。\n",
+    "之所以如此出色，是因为你能够将难题分解成各个组成部分，\n",
+    "先回答这些组成部分，然后再将它们整合起来回答更广泛的问题。\n",
+    "\n",
+    "这是一个问题：\n",
+    "{input}\"\"\"\n",
+    "\n",
+    "chinese_template = \"\"\"你是一位很棒的汉语言文家。你擅长回答语文问题。\n",
+    "之所以如此出色，是因为你能够将难题分解成各个组成部分，\n",
+    "先回答这些组成部分，然后再将它们整合起来回答更广泛的问题。\n",
+    "\n",
+    "这是一个问题：\n",
     "{input}\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5ef1db6e-3da4-4f9b-9707-0f30aa293dd7",
    "metadata": {},
    "outputs": [],
@@ -147,22 +168,37 @@
     "        \"description\": \"适用于回答数学问题\",\n",
     "        \"prompt_template\": math_template,\n",
     "    },\n",
+    "    {\n",
+    "        \"name\": \"计算机\",\n",
+    "        \"description\": \"适用于回答计算机问题\",\n",
+    "        \"prompt_template\": computer_template,\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"生物\",\n",
+    "        \"description\": \"适用于回答生物问题\",\n",
+    "        \"prompt_template\": biology_template,\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"语文\",\n",
+    "        \"description\": \"适用于回答语文问题\",\n",
+    "        \"prompt_template\": chinese_template,\n",
+    "    }\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3983cafe-c2d5-4951-b779-88d844594777",
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = OpenAI(model_name=\"gpt-3.5-turbo-instruct\")"
+    "llm = OpenAI(model_name=\"gpt-3.5-turbo-instruct\", api_key='sk-k9jM0trGFbAQm1cu6bD951Cd503c4203A64d6aFf7aD8Ff09',base_url='https://api.xiaoai.plus/v1') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "db8be9f0-1ac2-4ded-8950-6403cfa40004",
    "metadata": {},
    "outputs": [
@@ -170,9 +206,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Roaming\\Python\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
+      "D:\\miniconda\\envs\\langchain\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use RunnableSequence, e.g., `prompt | llm` instead.\n",
       "  warn_deprecated(\n",
-      "C:\\Users\\lenovo\\AppData\\Roaming\\Python\\Python310\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
+      "D:\\miniconda\\envs\\langchain\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use RunnableWithMessageHistory: https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html instead.\n",
       "  warn_deprecated(\n"
      ]
     }
@@ -198,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ae77b13a-2077-4e80-83f9-a2b1d8398461",
    "metadata": {},
    "outputs": [
@@ -208,7 +244,7 @@
        "langchain.chains.conversation.base.ConversationChain"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1c196e6c-e767-4d4f-8327-50ead641bc3a",
    "metadata": {},
    "outputs": [],
@@ -240,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f5ada86e-e430-412c-828d-b053b630f07c",
    "metadata": {},
    "outputs": [],
@@ -263,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8c1013dc-ae1f-468d-96b3-4babe0d50d1f",
    "metadata": {},
    "outputs": [
@@ -271,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['物理: 适用于回答物理问题', '数学: 适用于回答数学问题']\n"
+      "['物理: 适用于回答物理问题', '数学: 适用于回答数学问题', '计算机: 适用于回答计算机问题', '生物: 适用于回答生物问题', '语文: 适用于回答语文问题']\n"
      ]
     }
    ],
@@ -281,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a85ef126-aca1-40c2-8e01-d15af5500785",
    "metadata": {},
    "outputs": [
@@ -290,7 +326,10 @@
      "output_type": "stream",
      "text": [
       "物理: 适用于回答物理问题\n",
-      "数学: 适用于回答数学问题\n"
+      "数学: 适用于回答数学问题\n",
+      "计算机: 适用于回答计算机问题\n",
+      "生物: 适用于回答生物问题\n",
+      "语文: 适用于回答语文问题\n"
      ]
     }
    ],
@@ -300,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5db81fcb-704a-4250-a6b5-210e4be77af5",
    "metadata": {},
    "outputs": [
@@ -340,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f882244c-1fa6-4d74-a44c-578c9fb25e18",
    "metadata": {},
    "outputs": [
@@ -365,6 +404,9 @@
       "<< CANDIDATE PROMPTS >>\n",
       "物理: 适用于回答物理问题\n",
       "数学: 适用于回答数学问题\n",
+      "计算机: 适用于回答计算机问题\n",
+      "生物: 适用于回答生物问题\n",
+      "语文: 适用于回答语文问题\n",
       "\n",
       "<< INPUT >>\n",
       "{input}\n",
@@ -381,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "c2a482e4-5757-4295-a3d8-c3fdd1d4abd2",
    "metadata": {},
    "outputs": [],
@@ -485,27 +527,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a51119ed-025f-48d7-ad81-cd9cdab7090f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new MultiPromptChain chain...\u001b[0m\n",
+      "计算机: {'input': '计算机的组成部分是什么？'}\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{'input': '计算机的组成部分是什么？', 'text': '\\n\\n计算机通常由硬件和软件两部分组成。\\n\\n硬件包括主板、中央处理器（CPU）、内存、存储设备（如硬盘、固态硬盘、光盘）、输入设备（如键盘、鼠标）和输出设备（如显示器、打印机）等。\\n\\n软件是指运行在计算机上的程序和数据，包括操作系统、应用程序、驱动程序等。操作系统是控制计算机硬件和提供基本服务的程序，应用程序则是为了完成特定任务而设计的程序，驱动程序则是连接硬件和软件的桥梁。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chain.invoke(\"计算机的组成部分是什么？\"))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "cbda2930-a0e6-48b2-8e02-4c3d792f0225",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new MultiPromptChain chain...\u001b[0m\n",
+      "生物: {'input': '细胞由那些部分组成？病毒与细胞的关系是怎么样的？'}\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{'input': '细胞由那些部分组成？病毒与细胞的关系是怎么样的？', 'text': '\\n\\n细胞是由细胞质、细胞膜、细胞核和细胞器等组成的。其中，细胞质是细胞内部的液体，细胞膜则是细胞的外层包裹物，细胞核则是细胞内部的控制中心，细胞器则是细胞内部具有特定功能的结构。\\n\\n病毒与细胞的关系是互补的。病毒是一种非细胞的微生物，它无法自主进行生长和繁殖，需要寄生在宿主细胞内才能生存。病毒会通过感染细胞，将自身的遗传物质注入细胞内，利用细胞的生物合成机制来复制自身，并最终导致细'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chain.invoke(\"细胞由那些部分组成？病毒与细胞的关系是怎么样的？\"))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "24d11e0f-d5ee-4086-9e1a-b21000232134",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new MultiPromptChain chain...\u001b[0m\n",
+      "语文: {'input': '李清照是谁？她的著名作品有哪些？'}\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{'input': '李清照是谁？她的著名作品有哪些？', 'text': '\\n\\n李清照是一位中国古代著名的女词人。她的著名作品包括《如梦令》、《声声慢》和《一剪梅》等。她的词作在宋代被称为“词中之龙”，对后世词坛影响深远。李清照同时也是一位出色的书画家，她的书法被誉为“天下第一行书”。她的作品流传至今，仍受到广泛的欣赏和赞赏。'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chain.invoke(\"李清照是谁？她的著名作品有哪些？\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -528,9 +615,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "langchain",
    "language": "python",
-   "name": "python3"
+   "name": "langchain"
   },
   "language_info": {
    "codemirror_mode": {
